--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,32 @@
-# C/C++ with GCC
-# Build your C/C++ project with GCC using make.
-# Add steps that publish test results, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/c-cpp/gcc
-
 trigger:
-- main
+  branches:
+    include:
+      - master
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
 
-steps:
-- script: |
-    make
-  displayName: 'make'
+jobs:
+  - job: build
+    steps:
+      # Checkout code from the repository
+      # Set up Python
+      - task: UsePythonVersion@0
+        inputs:
+          versionSpec: '3.x'  # Replace with specific version if necessary
+          addToPath: true
+
+      # Install dependencies
+      - script: |
+          python -m pip install --upgrade pip
+          pip install platformio
+          pip install PyGithub
+        displayName: 'Install Dependencies'
+
+      # Run platformIO
+      - script: platformio run
+        displayName: 'Run PlatformIO'
+
+      # Upload .bin file and modify json file
+      - script: python ./.github/scripts/check_ver_and_deploy.py
+        displayName: 'Upload .bin file and modify JSON file'
